k8s/coma/apps/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbitttorrent
  namespace: qbittorrent
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - qbittorrent.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent-webui
          port: 8080
