k8s/coma/apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  cert-manager.io/cluster-issuer: vault-issuer
spec:
  rules:
    - host: "qbittorrent.coma.artichoke.network"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: qbittorrent-webui
                port:
                  number: 8080
  tls:
    - hosts:
        - "qbittorrent.coma.artichoke.network"
      secretName: internal-cert
